--- a/app.json
+++ b/app.json
@@ -22,6 +22,5 @@
       }
     ]
   },
-  "sitemapLocation": "sitemap.json",
-  "lazyCodeLoading": "requiredComponents"
+  "sitemapLocation": "sitemap.json"
 }
