--- a/app.json
+++ b/app.json
@@ -1,7 +1,16 @@
 {
   "pages": [
-    
-    "pages/index/home","pages/expert/form",
+    "pages/demo/home","pages/demo/reg",
+    "pages/demo/appointment/form",
+    "pages/appointment/form",
+    "pages/demo/expert/detail",
+    "pages/demo/expert/list",
+    "pages/demo/my",
+    "pages/demo/enterpriseReg",
+    "pages/demo/type",
+    "pages/demo/login",
+    "pages/index/home",
+    "pages/expert/form",
     "pages/expert/index",
     "pages/index/my",
     "pages/enterprise/index",
@@ -9,25 +18,24 @@
     "pages/enterprise/detail",
     "pages/index/reg",
     "pages/appointment/list",
-    "pages/appointment/form"
+    "pages/enterprise/form",
+    "pages/demo/expertReg"
+    
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#fff",
+    "navigationBarBackgroundColor": "#6887B3",
     "navigationBarTitleText": "米珈咨询",
-    "navigationBarTextStyle": "black"
+    "navigationBarTextStyle": "white"
   },
   "tabBar": {
     "custom": true,
     "list": [
       {
-        "pagePath": "pages/expert/index"
+        "pagePath": "pages/demo/home"
       },
       {
-        "pagePath": "pages/enterprise/index"
-      },
-      {
-        "pagePath": "pages/index/my"
+        "pagePath": "pages/demo/my"
       }
     ]
   },
